CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
project(LexicalAnalyzer)
set(CMAKE_CXX_STANDARD 20)
add_executable(CS236_Project1 Automaton.h ColonAutomaton.cpp ColonAutomaton.h ColonDashAutomaton.cpp ColonDashAutomaton.h Lexer.cpp Lexer.h Token.cpp Token.h main.cpp MatcherAutomaton.cpp MatcherAutomaton.h SchemesAutomaton.cpp SchemesAutomaton.h FactsAutomaton.cpp FactsAutomaton.h RulesAutomaton.cpp RulesAutomaton.h QueriesAutomaton.cpp QueriesAutomaton.h IdAutomaton.cpp IdAutomaton.h StringAutomaton.cpp StringAutomaton.h LineCommentAutomaton.cpp LineCommentAutomaton.h BlockCommentAutomaton.cpp BlockCommentAutomaton.h UnclosedStringAutomaton.cpp UnclosedStringAutomaton.h UnclosedBlockCommentAutomaton.cpp UnclosedBlockCommentAutomaton.h Parser.cpp Parser.h DatalogProgram.cpp DatalogProgram.h Parameter.cpp Parameter.h Predicate.cpp Predicate.h Rule.cpp Rule.h Tuple.cpp Tuple.h Header.cpp Header.h Relation.cpp Relation.h Database.cpp Database.h Interpreter.cpp Interpreter.h)
file(COPY InputFiles DESTINATION ${CMAKE_BINARY_DIR})
